allow removed interviewer to show on student record if already assigned

--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1096,6 +1096,7 @@ fieldset{
 	            Interviewer: 
 				<select name="interviewer" id="interviewer" {% if record.data.interview and record.data.interview.emailed_date %}disabled="disabled"{% endif %}>
 			    <option></option>
+				{% if record %}{% if record.data.interviewer %}{% if record.data.interviewer not in interviewers %}<option style="color:red;" selected="selected">{{record.data.interviewer}}</option>{% endif %}{% endif %}{% endif %}
 				{% for opt in interviewers %}
 					<option
 					{% if record %}
