--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -4,10 +4,9 @@
             {% if current_user.edit_students %}
             <a class="btn btn-primary" href="/admin/student/new">Add new student survey</a>
             {% endif %}
-            {% if current_user.do_admin %}
-            <a id="export" class="btn" href="/admin/export">Export selected</a>
-            {% endif %}
+
             <a id="print" class="btn" href="/admin/student/selected.pdf">Print selected</a>
+
             {% if current_user.edit_students or current_user.perform_and_manage_interviewers %}
             <br>
             <a id="interviewers" class="btn btn-primary" href="/admin/assign">Allocate interviewer</a>
@@ -17,7 +16,21 @@
                 <option>{{ name }}</option>
             {% endfor %}
             </select>
+
+            <a id="statuses" class="btn btn-primary" href="/admin/status">Allocate status</a>
+            <select id="assignstatus" style="display: none;">
+                <option></option>
+            {% for name in ["new", "not_eligible_interviewed", "not_eligible_not_interviewed", "not_applying_interviewed", "not_applying_not_interviewed", "allocated_to_interviewer", "awaiting_interview", "interviewed", "absent", "query", "paes_requested", "paes_in_progress", "paes_complete", "complete"] %}
+                <option>{{ name }}</option>
+            {% endfor %}
+            </select>
             {% endif %}
+
+
+            {% if current_user.do_admin %}
+            <a id="export" class="btn" href="/admin/export">Export selected</a>
+            {% endif %}
+
             {% if current_user.do_admin %}
             <br>
             <a id="archives" class="btn btn-primary" href="/admin/archive">Archive records</a>
@@ -27,8 +40,8 @@
                 <option>{{ name }}</option>
             {% endfor %}
             </select>
-
             {% endif %}
+
 {% endblock %}
 
 
@@ -67,6 +80,7 @@ jQuery(document).ready(function() {
         });
         if (selected) {
             $('#assign').toggle();
+            $('#assignstatus').toggle();
             $('#interviewers').toggle();
         }
     }
@@ -92,6 +106,41 @@ jQuery(document).ready(function() {
         }
     }
     $('#assign').bind('change',assign);
+
+    var statuses = function(event) {
+        event.preventDefault();
+        var selected = false;
+        $('.selectthis').each(function() {
+            if ($(this).is(':checked')) selected = true;
+        });
+        if (selected) {
+            $('#assign').toggle();
+            $('#assignstatus').toggle();
+            $('#interviewers').toggle();
+        }
+    }
+    $('#statuses').bind('click', statuses);
+    var assignstatus = function(event) {
+        event.preventDefault();
+        var selected = [];
+        var qry = $.parseJSON($.fn.facetview.options.querystring);
+        delete qry.fields;
+        if ( $('#selecttotal').is(':checked') ) {
+            qry.size = $.fn.facetview.options.rawdata.hits.total;
+        } else if ( $('#selectall').is(':checked') ) {
+        } else {
+            $('.selectthis').each(function() {
+                if ($(this).is(':checked')) selected.push($(this).attr('name').replace("select_",""));
+            });
+        }
+        var si = $('#assignstatus').val();
+        if (si) {
+            var loc = '/admin/student/assign?status=' + si + '&q=' + JSON.stringify(qry);
+            if ( selected.length > 0 ) loc += '&selected=' + JSON.stringify(selected);
+            window.location = loc;
+        }
+    }
+    $('#assignstatus').bind('change',assignstatus);
 
     var archives = function(event) {
         event.preventDefault();
