--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -168,6 +168,13 @@ jQuery(document).ready(function() {
 	                    <td><input type="checkbox" name="simd40"> SIMD 40</td>
                     </tr>
 
+					<tr>
+	                    <td></td>
+	                    <td></td>
+	                    <td></td>
+	                    <td><input type="checkbox" name="had_s5_interview"> Had S5 interview</td>
+                    </tr>
+
 					<!-- old ones not used any more -->
             		<!--<td><input type="checkbox" name="law_application"> Law application</td>-->
                     <!--<td><input type="checkbox" name="late_decision_to_apply"> Late decision to apply</td>-->
