improve student survey layout

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -933,21 +933,21 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 			more information.
 	
 			<div id="more_estranged" style="display:none;">
-			<select id="claimed_estranged_age" name="claimed_estranged_age">
+				How old were you when you became estranged? <select id="claimed_estranged_age" name="claimed_estranged_age" style="width:150px">
 				<option></option>
 				<option>Under 16</option>
 				<option>16</option>
 				<option>17</option>
 				<option>18</option>
 			</select>
-			How old were you when you became estranged?
+			<br>
 	
-			<select id="claimed_estranged_cared_for" name="claimed_estranged_cared_for">
+			Have you ever been cared for by another member of your family, friends, or local authorities?
+			<select id="claimed_estranged_cared_for" name="claimed_estranged_cared_for" style="width:150px">
 				<option></option>
 				<option>Yes</option>
 				<option>No</option>
 			</select>
-			Have you ever been cared for by another member of your family, friends, or local authorities?
 			</div>
 
 			<br><br>
