--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -198,7 +198,7 @@ jQuery(document).ready(function() {
 	$('.qualificationselector').each(function (qs, i) {
 		console.log(i);
 		$(qs).val((i < 4 ? 'Fourth' : i < 8 ? 'Fifth' : 'Sixth') + ' year');
-		console.log(qs);
+		console.log($(qs));
 		if (i > 7) $(qs).trigger('change');
 	});
 
