--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -192,7 +192,10 @@ jQuery(document).ready(function() {
 		var oh = $(this).html();
 		oh = oh.replace(' selected="selected"', '').replace('"' + yr + ' year"', '"' + yr + ' year" selected="selected"');
 		$(this).html(oh);
-		if (i > 7) $(this).change();
+		if (i > 7) {
+			console.log('change');
+			$(this).trigger('change');
+		}
 	});
 
     var triggersave = function(event) {
